--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -418,9 +418,9 @@ h5 {
 .err404 a, .errGeneral a{
 	display: block;
 	padding: 10px;
-	/*background-color: #cc0000;*/
 	width: 250px;
 	margin: 25px auto 0 auto;
+	background-image: url('../img/bgBoton.png');
 	border-radius: 7px;
 	border: 2px solid #B60000;
 	font-size: 20px;
@@ -428,7 +428,6 @@ h5 {
 	text-align: center;
 	color: #fff;
 	text-shadow: #B60000 2px 2px 2px;
-	background: #cc0000 url('../img/bgBoton.png');
 }
 .errGeneral span{
 	display: block;
